Hide 'All, Active, Completed' filter + fix z-index conflict with hamburger menu and hero text

--- a/src/components/Dashboard/ModuleView/ModuleView.css
+++ b/src/components/Dashboard/ModuleView/ModuleView.css
@@ -23,7 +23,8 @@
 }
 
 .module-view-left-side ul {
-    display: flex;
+    /* display: flex; */
+    display: none;
     list-style: none;
     padding: 0;
     max-height: 100vh;
